Adjust homepage search position, fix z-index, show one fewer item

--- a/app/assets/stylesheets/blocks/index/homepage-content.scss
+++ b/app/assets/stylesheets/blocks/index/homepage-content.scss
@@ -3,7 +3,7 @@
   @include flex-direction(column);
   @include align-items(center);
 
-  margin: 110px auto 0;
+  margin: 8rem auto 0;
   max-width: 550px;
   padding: 2rem;
   background-color: rgba(42, 62, 80, .6);
